--- a/usuarios/templates/usuarios/inicio.html
+++ b/usuarios/templates/usuarios/inicio.html
@@ -15,7 +15,7 @@
   </div>
 
   <style>
-/* From Uiverse.io by SouravBandyopadhyay */
+
 .notification {
   display: flex;
   flex-direction: column;
@@ -23,13 +23,13 @@
   position: relative;
   width: 70rem;
   height: 10rem;
-  background: #29292c;
+  background:rgb(255, 255, 255);
   border-radius: 1rem;
   overflow: hidden;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 16px;
-  --gradient: linear-gradient(to bottom,rgb(168, 46, 255),rgb(142, 56, 240), #7e61ff);
-  --color:rgb(176, 53, 228)
+  --gradient: linear-gradient(to bottom,rgb(63, 67, 73),rgb(64, 68, 75),rgb(53, 60, 63));
+  --color:rgb(73, 77, 83)
 }
 
 .notification:before {
@@ -37,7 +37,7 @@
   content: "";
   inset: 0.0625rem;
   border-radius: 0.9375rem;
-  background: #18181b;
+  background:rgb(255, 255, 255);
   z-index: 2
 }
 
@@ -109,7 +109,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: white;
 }
 
 </style>
@@ -134,17 +134,30 @@ body {
     font-size: 1rem;
     font-weight: 500;
     color: white;
-    background: linear-gradient(to right,rgb(157, 17, 232),rgb(242, 73, 163));
+    background: linear-gradient(to right,rgb(51, 56, 59),rgb(63, 67, 73));
     border: none;
     border-radius: 8px;
     text-decoration: none;
     transition: all 0.3s ease;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 12px rgba(255, 255, 255, 0.2);
+      cursor: pointer;
+  padding: 12px 24px;
+  position: relative;
+  line-height: 24px;
+  border-radius: 9px;
+  box-shadow: 0px 1px 2px #2B3044, 0px 4px 16px #2B3044;
+  transform-style: preserve-3d;
+  transform: scale(var(--s, 1)) perspective(600px)
+    rotateX(var(--rx, 0deg)) rotateY(var(--ry, 0deg));
+  perspective: 600px;
+  transition: transform 0.1s;
+  text-decoration: none;
+  display: inline-block;
   }
 
   .custom-login-btn:hover {
     transform: translateY(-2px);
-    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 6px 16px rgba(255, 255, 255, 0.3);
     text-decoration: none;
   }
 
@@ -168,7 +181,7 @@ body {
 .rainbow-hover {
   font-size: 16px;
   font-weight: 700;
-  color: #ff7576;
+  color:rgb(69, 151, 239);
   background-color: #2B3044;
   border: none;
   outline: none;
@@ -195,11 +208,11 @@ body {
 .sp {
   background: linear-gradient(
     90deg,
-rgb(107, 83, 201),
-rgb(153, 54, 240),
-rgb(197, 40, 190),
-rgb(248, 68, 209),
-rgb(213, 46, 193)
+rgb(79, 165, 252),
+rgb(51, 143, 255),
+rgb(65, 176, 213),
+rgb(68, 167, 248),
+rgb(69, 178, 255)
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -215,12 +228,12 @@ rgb(213, 46, 193)
 
   <hr class="my-5" />
 
- <h2 style="color: #C084FC;">¿Qué puedes hacer con StudyHub?</h2>
+ <h2 style="color:rgb(0, 0, 0);">¿Qué puedes hacer con StudyHub?</h2>
 
  <style>
     .list-group li {
-      background-color: black;
-      color: white;
+      background-color: white;
+      color: gray;
     }
   </style>
   <ul class="list-group list-group-flush w-50 mx-auto text-start">
