--- a/usuarios/templates/usuarios/base.html
+++ b/usuarios/templates/usuarios/base.html
@@ -8,7 +8,7 @@
   {% block extra_css %}{% endblock %}
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+  <nav class="navbar navbar-expand-lg navbar-light bg-info mb-4">
     <div class="container">
       <a class="navbar-brand" href="{% url 'inicio' %}">StudyHub</a>
       <div>
